scrollbar fixing

--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -70,16 +70,22 @@
 }
 @keyframes slide {
   0% {
-    top: 0;
+    transform: translateY(0);
+  }
+  10% {
+    transform: translateY(-5%);
   }
   25% {
-    top: -1.1em;
+    transform: translateY(-25%);
   }
   50% {
-    top: -2.2em;
+    transform: translateY(-50%);
   }
   75% {
-    top: -3.3em;
+    transform: translateY(-75%);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
 /* -----------------------------rotating circle--------------------------- */
